# PKGBUILD

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  check-updates.py  pyproject.toml
dieharder/: PKGBUILD
dsnet-git/: .gitignore  PKGBUILD
testu01/: PKGBUILD
xp-pen/: .gitignore
